--- a/{{ cookiecutter.project_name }}/environments/.env.sample
+++ b/{{ cookiecutter.project_name }}/environments/.env.sample
@@ -1,7 +1,4 @@
-DJANGO_ENV="dev"
 DJANGO_SECRET_KEY="DJANGO_SECRET_KEY_VALUE"
 
-{% if cookiecutter.enable_sentry == "y" %}
-# Sentry
-SENTRY_DSN="https://examplePublicKey@o0.ingest.sentry.io/0"
-{% endif %}
+{% if cookiecutter.enable_sentry == "y" %}# Sentry
+SENTRY_DSN="https://examplePublicKey@o0.ingest.sentry.io/0"{% endif %}
